fix thumbnails alignement

--- a/source/stylesheets/pages/img-slider.scss
+++ b/source/stylesheets/pages/img-slider.scss
@@ -20,7 +20,7 @@
 
 .container-thumbs {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   vertical-align: center;
   flex-wrap: wrap;
